<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.springframework.shell</groupId>
	<artifactId>spring-shell-parent</artifactId>
	<name>Spring Shell Parent POM</name>
	<version>2.1.8-SNAPSHOT</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.10</version>
		<relativePath />
	</parent>
	<scm>
		<url>https://github.com/spring-projects/spring-shell</url>
		<connection>scm:git:git://github.com/spring-projects/spring-shell.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/spring-projects/spring-shell.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<properties>
		<jline.version>3.21.0</jline.version>
		<antlr-st4.version>4.3.1</antlr-st4.version>
		<jimfs.version>1.2</jimfs.version>
	</properties>

	<modules>
		<module>spring-shell-core</module>
		<module>spring-shell-core-test-support</module>
		<module>spring-shell-standard</module>
		<module>spring-shell-standard-commands</module>
		<module>spring-shell-table</module>
		<module>spring-shell-docs</module>
		<module>spring-shell-dependencies</module>
		<module>spring-shell-starter</module>
		<module>spring-shell-starter-jna</module>
		<module>spring-shell-autoconfigure</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.shell</groupId>
				<artifactId>spring-shell-core</artifactId>
				<version>2.1.8-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.shell</groupId>
				<artifactId>spring-shell-core-test-support</artifactId>
				<version>2.1.8-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.shell</groupId>
				<artifactId>spring-shell-standard</artifactId>
				<version>2.1.8-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.shell</groupId>
				<artifactId>spring-shell-standard-commands</artifactId>
				<version>2.1.8-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.shell</groupId>
				<artifactId>spring-shell-starter</artifactId>
				<version>2.1.8-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.shell</groupId>
				<artifactId>spring-shell-starter-jna</artifactId>
				<version>2.1.8-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.shell</groupId>
				<artifactId>spring-shell-table</artifactId>
				<version>2.1.8-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.shell</groupId>
				<artifactId>spring-shell-autoconfigure</artifactId>
				<version>2.1.8-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.jline</groupId>
				<artifactId>jline</artifactId>
				<version>${jline.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jline</groupId>
				<artifactId>jline-terminal-jna</artifactId>
				<version>${jline.version}</version>
				<optional>true</optional>
			</dependency>
			<dependency>
				<groupId>org.antlr</groupId>
				<artifactId>ST4</artifactId>
				<version>${antlr-st4.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.jimfs</groupId>
				<artifactId>jimfs</artifactId>
				<version>${jimfs.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<redirectTestOutputToFile>true</redirectTestOutputToFile>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>javadoc</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
				<configuration>
					<quiet>true</quiet>
					<additionalJOption>-Xdoclint:none</additionalJOption>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<verbose>true</verbose>
					<dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>spring</id>
			<repositories>
				<repository>
					<id>spring-snapshots</id>
					<name>Spring Snapshots</name>
					<url>https://repo.spring.io/libs-snapshot-local</url>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
				</repository>
				<repository>
					<id>spring-milestones</id>
					<name>Spring Milestones</name>
					<url>https://repo.spring.io/libs-milestone-local</url>
					<snapshots>
						<enabled>false</enabled>
					</snapshots>
				</repository>
				<repository>
					<id>spring-releases</id>
					<name>Spring Releases</name>
					<url>https://repo.spring.io/release</url>
					<snapshots>
						<enabled>false</enabled>
					</snapshots>
				</repository>
			</repositories>
			<pluginRepositories>
				<pluginRepository>
					<id>spring-snapshots</id>
					<name>Spring Snapshots</name>
					<url>https://repo.spring.io/libs-snapshot-local</url>
					<snapshots>
						<enabled>true</enabled>
					</snapshots>
				</pluginRepository>
				<pluginRepository>
					<id>spring-milestones</id>
					<name>Spring Milestones</name>
					<url>https://repo.spring.io/libs-milestone-local</url>
					<snapshots>
						<enabled>false</enabled>
					</snapshots>
				</pluginRepository>
			</pluginRepositories>
		</profile>
		<profile>
			<!-- Don't build samples by default, so they're not published -->
			<id>samples</id>
			<activation>
				<property>
					<name>env.DISABLE_SAMPLES</name>
					<value>!true</value>
				</property>
			</activation>
			<properties>
				<java.version>11</java.version>
			</properties>
			<modules>
				<module>spring-shell-samples</module>
			</modules>
		</profile>
	</profiles>
</project>
